[package]
name = "telnet-client"
version = "0.1.0"
edition = "2021"
description = "Simple telnet client."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = [ "derive" ] }
log = "0.4.17"
env_logger = "0.9.0"
